--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,14 @@
 /* pages/index/index.wxss */
+.virtue-wrapper{
+  display: flex;
+  flex-direction: row;
+  line-height: 80rpx
+}
+
+.virtue{
+  text-align: center
+}
+
+.virtue-icon{
+  text-align: center
+}
